--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/asnganje/shoeStoreBackend/issues"
   },
-  "homepage": "https://github.com/asnganje/shoeStoreBackend#readme"
+  "homepage": "https://github.com/asnganje/shoeStoreBackend#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
